# image-watch

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: docker-image.yml
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: AuthRequired.svelte  Image.svelte  Navbar.svelte  UnauthRequired.svelte
frontend/src/components/__tests__/: AuthGuards.test.js  AuthRequiredHarness.svelte  Image.test.js  ImageHarness.svelte  Navbar.test.js  NavbarHarness.svelte  UnauthRequiredHarness.svelte
frontend/src/components/router/: Route.svelte  Router.svelte
frontend/src/components/router/__tests__/: Router.test.js  RouterDoubleDefaultHarness.svelte  RouterHarness.svelte
frontend/src/pages/: Images.svelte  Login.svelte
frontend/src/pages/__tests__/: Images.test.js  ImagesHarness.svelte  Login.test.js  LoginHarness.svelte
src/: authentication_actor.rs  axum_util.rs  config.rs  error.rs  file_change_data.rs  file_change_tracker_actor.rs  file_tracker_actor.rs  frontend.rs  main.rs  serve_frontend.rs  shutdown_actor.rs  tokio_util.rs  web_socket_actor.rs
src/authentication/: authentication_actor.rs  authentication_token_store_actor.rs  mod.rs
